--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -8,10 +8,10 @@ mailConfig.attachment=false
 mailConfig.subject="Katalon Summary Report for ${suiteName} ${suiteCollectionName}"
 mailConfig.cc=""
 mailConfig.bcc=""
-mailConfig.useUsernameAsSender=true
+mailConfig.useUsernameAsSender=false
 mailConfig.sender="training.qc@hotmail.com"
-mailConfig.reportRecipients="maidtt@firegroup.io"
-mailConfig.reportFormat="[\\n  \\"HTML\\",\\n  \\"CSV\\"\\n]"
+mailConfig.reportRecipients=""
+mailConfig.reportFormat="[\\n  \\"CSV\\",\\n  \\"HTML\\"\\n]"
 mailConfig.sendTestSuiteReport=true
 mailConfig.sendReportTestFailedOnly=false
 mailConfig.sendTestSuiteCollectionReport=false
